tests/error/modulo_zero.gw
// [contains] modulo by zero
[ 1%0, 2, 3, 4, 5 ];
